force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/Outreach_Sequence_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Outreach Sequence Mapping</label>
    <pluralLabel>Outreach Sequence Mappings</pluralLabel>
</CustomObject>