force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/fields/Add_Parents_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Add_Parents_Threshold_Met__c</fullName>
    <label>Add Parents Threshold Met</label>
    <length>255</length>
    <type>Text</type>
</CustomField>