force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/fields/Billing_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Billing_Closed_Won__c</fullName>
    <label>Billing Closed Won</label>
    <length>10</length>
    <type>Text</type>
</CustomField>