force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/fields/Billing_Launch_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Billing_Launch_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used when evaluating if a customer&apos;s Billing Launch Date is no less than 60 days ago</description>
    <label>Billing Launch Eligible</label>
    <type>Checkbox</type>
</CustomField>