force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/fields/Billing_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Verified_Date__c</fullName>
    <label>Billing Verified Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>