force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/fields/Initiate_Parent_Signups_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Initiate_Parent_Signups_Threshold_Met__c</fullName>
    <label>Initiate Parent Signups Threshold Met</label>
    <length>255</length>
    <type>Text</type>
</CustomField>