force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/fields/Log_First_Activity_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Log_First_Activity_Threshold_Met__c</fullName>
    <label>Log First Activity Threshold Met</label>
    <length>255</length>
    <type>Text</type>
</CustomField>