force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/fields/Number_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sites__c</fullName>
    <label>Number of Sites</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>&gt;1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>