force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/fields/Outreach_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Sequence_Name__c</fullName>
    <label>Outreach Sequence Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>