force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/fields/SaaS_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Activation_Date__c</fullName>
    <label>SaaS Activation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>