force-app/main/default/objects/Outreach_Sequence_Mapping__mdt/fields/Upload_Students_Threshold_Met__c.field-meta.xml
<CustomField>
    <fullName>Upload_Students_Threshold_Met__c</fullName>
    <label>Upload Students Threshold Met</label>
    <length>255</length>
    <type>Text</type>
</CustomField>